--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
@@ -31,7 +32,6 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "supabase": "^2.62.5",
-    "tailwindcss": "^4.1.17",
     "vite": "^7.1.7"
   }
 }
