--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@zxing/library": "^0.21.3",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
